--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "sveltestrap": "^5.6.3"
   },
   "type": "module"
 }
