--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "bootstrap": "^5.1.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
@@ -21,10 +22,11 @@
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
+    "svelte-i18n": "^3.3.13",
     "svelte-preprocess": "^4.9.4",
+    "sveltestrap": "^5.6.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3",
-    "sveltestrap": "^5.6.3"
+    "typescript": "^4.4.3"
   },
   "type": "module"
 }
